fix for carousel on mobile

--- a/app/css/sections/_science-of-allergic-rhinitis.scss
+++ b/app/css/sections/_science-of-allergic-rhinitis.scss
@@ -845,6 +845,7 @@
                         }
                         h3{
                             margin-top:0;
+                            margin-bottom: 0;
                         }
                         p{
                             margin-top:0;
